tests/expectations/compiler/statements/loop_non_literal_bound_fail.out
Error [ECMP0376008]: This loop bound could not be determined at compile time.
    --> compiler-test:10:28
     |
  10 |         for i:u64 in 0u64..amount {
     |                            ^^^^^^
